# phastats-web

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  requirements.txt  run.py  test_interactive.fastq
.github/workflows/: ci.yml
docs/: _config.yml  getting-started.html  index.html
phastats-main/: README.md
phastats-main/phastats/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test.fastq
phastats-main/phastats/src/phastats/: __init__.py  plotting.py  reports.py
phastats-main/phastats/src/phastats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
phastats-main/samples/: data1.fq
phastats-web/: .gitignore  README.md  docker-compose.yml  requirements.txt
phastats-web/phastats/src/phastats/: cli.py  core.py  parser.py  utils.py
phastats-web/templates/: base.html  results.html
static/css/: custom.css
templates/: index.html
