[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phastats"
dynamic = ["version"]
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "Advanced FASTQ Quality Analysis Tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["bioinformatics", "fastq", "quality-control", "sequencing", "genomics"]
dependencies = [
    "matplotlib>=3.3.0,<4.0.0",
    "numpy>=1.19.0,<2.0.0",
    "pandas>=1.1.0,<3.0.0",
    "scipy>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.10.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=0.5.0",
]
web = [
    "Flask>=2.0.0,<4.0.0",
    "Werkzeug>=2.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/phastats"
Documentation = "https://your-username.github.io/phastats/"
Repository = "https://github.com/your-username/phastats.git"
"Bug Reports" = "https://github.com/your-username/phastats/issues"
Changelog = "https://github.com/your-username/phastats/blob/main/CHANGELOG.md"

[project.scripts]
phastats = "phastats.cli:main"

[tool.setuptools_scm]
write_to = "src/phastats/_version.py"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
phastats = ["data/*", "templates/*"]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true 